# github

./: .env.example  .gitignore  PRODUCT.md  README.md  TODO.md  findings.md  langgraph.json  progress.md  pyproject.toml  requirements-dev.txt  requirements-lightrag.txt  requirements.txt  run_demo.py  task_plan.md
agent-chat-ui/: .env.example  .gitignore  eslint.config.js  next.config.mjs  package.json  pnpm-lock.yaml
config/: jackyun_warehouse_scope_rules.json  reference_platform.schema.json  reference_platforms.json  wecom_smartsheet_sources.example.json
docs/: architecture.md  company-decision-workflow.md  cross-platform-path-audit.md  data-cleaning-workflow.md  decision-upgrade.md  karpathy-llm-wiki.md  lightrag-integration.md  obsidian-wiki-workflow.md  raw-to-obsidian-ingest.md  reference-project-analysis.md  reference-repo-p16-playbook.md  reference-repo-p18-playbook.md  runbook.md  source-sync-workflow-contract.md  stitch-ui-redesign-prompt.md  task-delegation-workflow.md  wiki_schema.md
scripts/: common.ps1  common.sh  doctor.ps1  doctor.py  doctor.sh  health_backend.ps1  health_backend.sh  health_lightrag.ps1  health_lightrag.sh  install_lightrag.ps1  install_lightrag.sh  migrate_tasks_to_sqlite.py  query_fact_layer.ps1  query_fact_layer.sh  register_fact_layer.ps1  register_fact_layer.sh  repair_thread_archives.ps1  repair_thread_archives.py  repair_thread_archives.sh  reset_knowledge_state.ps1  reset_knowledge_state.sh  run_langgraph_backend.py  start_backend.ps1  start_backend.sh  start_frontend.ps1  start_frontend.sh  start_fullstack.ps1  (+21 more)
(+267 files in other folders)
