[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "a2a-ecommerce-demo"
version = "0.0.0"
requires-python = ">=3.12"
dependencies = [
  "beautifulsoup4>=4.12.3",
  "duckdb>=1.2.0",
  "langchain-openai>=1.0.0",
  "langgraph-cli[inmem]>=0.4.0",
  "langgraph-supervisor>=0.0.30",
  "langgraph>=1.0.0",
  "openpyxl>=3.1.5",
  "pypdf>=5.0.0",
  "python-docx>=1.1.2",
  "python-dotenv>=1.0.1",
  "python-pptx>=1.0.2",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py312"
src = ["src", "tests"]
exclude = [".venv", "_references", "agent-chat-ui", "data"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.pyright]
include = ["src", "tests"]
typeCheckingMode = "basic"
pythonVersion = "3.12"
reportMissingImports = false
reportMissingModuleSource = false
reportMissingTypeStubs = false
